--- a/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/02-select/_select.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/02-select/_select.scss
@@ -4,7 +4,7 @@
 
 @mixin inputSelect{
 	width: 100%;
-	font-size: 16px;
+	font-size: 1.6rem;
 	border: 1px solid $borderRule;
 	border-radius: 0;
 	height: auto;
