--- a/web/themes/oc_patterns/components/_patterns/01-atoms/09-field/_field.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/09-field/_field.scss
@@ -4,7 +4,7 @@
 .field{
 	span.inline-label{
 		font-weight: $heavy;
-		margin-right: .5em;
+		margin-right: 1rem;
 		& + div{
 			display: inline;
 			//if multifield
