--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/menu/_footer-menu.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/menu/_footer-menu.scss
@@ -21,7 +21,7 @@
 		li{
 			position: relative;
 			a{
-				font-size: 16px;
+				font-size: 1.6rem;
 				display: block;
 				color: $white;
 				&:hover,&:focus{
