--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/form/_form.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/form/_form.scss
@@ -9,7 +9,7 @@
 		& > .js-form-item{
 			margin-bottom: $spaceSm;
 			label{
-				margin-bottom: .25em;
+				margin-bottom: .5rem;
 				display: inline-block;
 				font-weight: $heavy;
 			}
