--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/links-files/_links-files.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/links-files/_links-files.scss
@@ -7,12 +7,12 @@
 	@include auto;
 	//set margins for links and files lists
 	.links-files{
-		margin-top: 1em;
+		margin-top: 2rem;
 		@include smallTab{
-			@include cssColumns(2,2em,nobreak);
+			@include cssColumns(2,4rem,nobreak);
 		}
 		& > div{
-			margin-bottom: .25em;
+			margin-bottom: .5rem;
 		}
 	}
 }//end links-files widget
