--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/map/_map.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/map/_map.scss
@@ -20,7 +20,7 @@
 		//style location content
 		.location-content{
 			font-family: $bodyFont;
-			font-size: 14px;
+			font-size: 1.4rem;
 			color: $body;
 		}
 	}
