--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/layout-builder/_layout_builder_admin.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/layout-builder/_layout_builder_admin.scss
@@ -32,7 +32,7 @@
 		color: #ffffff;
 		background: #bf0e0e;
 		padding: 4px 8px;
-		margin-bottom: .25em;
+		margin-bottom: .5rem;
 	}
 }//end layout builder section region
 
