--- a/web/themes/oc_patterns/components/_patterns/04-pages/search/_search.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/search/_search.scss
@@ -36,7 +36,7 @@
 				width: 100%;
 				max-width: $textMax;
 				@include auto;
-				padding-bottom: .5em;
+				padding-bottom: 1rem;
 				border-bottom: 1px solid $borderRule;
 				margin-bottom: $spaceXs;
 			}
