--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_global-styles.scss
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_global-styles.scss
@@ -109,10 +109,10 @@ body {
 		font-style: italic;
 	}
 	h2{
-		font-size: 16px;
+		font-size: 1.6rem;
 	}
 	h3{
-		font-size: 14px;
+		font-size: 1.4rem;
 	}
 }
 
@@ -128,7 +128,7 @@ body {
 		display: block;
 		width: 100%;
 		background: $white;
-		padding: .25em 1em;
+		padding: .5rem 2rem;
 	}
 }
 
@@ -214,7 +214,3 @@ body {
 		}
 	}// end tabs
 }//end local tasks
-
-
-/* PLAYGROUND
------------------ */
