--- a/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/08-views-exposed-filters/_views_exposed_filters.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/08-views-exposed-filters/_views_exposed_filters.scss
@@ -8,7 +8,7 @@
 		display: inline-block;
 		vertical-align: top;
 		&:nth-last-child(n+3){
-			margin-right: 1em;
+			margin-right: 2rem;
 		}
 	}
 	input.form-submit.button{
@@ -27,7 +27,7 @@
 		}
 	}
 	&+ .view-content{
-		margin-top: 2em;
+		margin-top: 4rem;
 	}
 }//end views exposed form
 
