--- a/web/themes/oc_patterns/components/_patterns/01-atoms/06-buttons/_default_buttons.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/06-buttons/_default_buttons.scss
@@ -11,14 +11,14 @@
 	border:none;
 	color: $white;
 	line-height: 1.15;
-	padding: .5em 2em;
+	padding: 1rem 4rem;
 	display: inline-block;
 	text-decoration: none;
 	text-align: center;
 	text-transform: uppercase;
 	font-family: $header;
 	font-weight: $heavy;
-	margin-bottom: 1.5em;
+	margin-bottom: $spaceMd;
 	cursor: pointer;
 	&:hover,&:focus {
 		color: $white;
@@ -70,7 +70,7 @@
 
 //background for outlineButton example
 .pl.background{
-	padding: 2em 3em;
+	padding: 4rem 6rem;
 	width: 100%;
 	background: $hoverLink;
 }
