--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/branding-block/_branding-block.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/branding-block/_branding-block.scss
@@ -11,7 +11,7 @@
 			width: 100%;
 		}
 		.site-name {
-			font-size: 24px;
+			font-size: 2.4rem;
 			color: $white;
 			display: none;
 		}
@@ -26,7 +26,7 @@
 		}
 		@include tab{
 			.site-name{
-				font-size: 32px;
+				font-size: 3.2rem;
 			}
 		}
 	}//end logo a
