--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/search-block/_search-block.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/search-block/_search-block.scss
@@ -76,7 +76,7 @@
 			color: $black;
 			i{
 				position: relative;
-				font-size: 22px;
+				font-size: 2.2rem;
 			}
 		}
 	}//end t-search-wrapper
@@ -104,7 +104,7 @@
 			width: 100%;
 			height: 100%;
 			color: $black;
-			font-size: 28px;
+			font-size: 2.8rem;
 			background: $offWhite;
 			cursor: pointer;
 			@include safeFlex(column,null,center,center);
@@ -208,7 +208,7 @@
 					-webkit-box-shadow: 0 0 0 1000px $white inset;
 				}
 				@include tab{
-					font-size: 22px;
+					font-size: 2.2rem;
 				}
 				&:focus{
 					outline: 1px solid $white;
@@ -218,7 +218,7 @@
 					@include deskMenu{
 						color: $black;
 						border-bottom-color: $black;
-						font-size: 16px;
+						font-size: 1.6rem;
 						@include placeholder;
 						&:focus{
 							outline: 1px solid $grey;
