--- a/web/themes/oc_patterns/components/_patterns/02-molecules/menus/01-breadcrumbs/_breadcrumbs.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/menus/01-breadcrumbs/_breadcrumbs.scss
@@ -15,7 +15,7 @@
 		color: $darkGrey;
 		@include xSmaller;
 		a{
-			padding-right: .25em;
+			padding-right: .5rem;
 			@include transAll(.3s);
 		}
 		&:not(:last-of-type){
