--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/image/_image.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/image/_image.scss
@@ -48,7 +48,7 @@
 
 	//image summary field
 	.field-oc-long-text{
-		margin: 1em auto 0;
+		margin: 2rem auto 0;
 		text-align: left;
 		max-width: $textMax;
 	}
