--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/profile/_profile.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/profile/_profile.scss
@@ -49,10 +49,10 @@
 	.block-field.block-title{
 		@extend %mainImageShim;
 		h1{
-			margin-bottom: 10px;
-			font-size: 32px;
+			margin-bottom: 1rem;
+			font-size: 3.2rem;
 			@include tab{
-				font-size: 48px;
+				font-size: 4.8rem;
 			}
 		}
 	}//end title
@@ -61,9 +61,9 @@
 		margin-bottom: $spaceXs;
 		@extend %mainImageShim;
 		.field-position{
-			font-size: 21px;
+			font-size: 2.2rem;
 			@include tab{
-				font-size: 24px;
+				font-size: 2.4rem;
 			}
 		}
 	}//end block field position
