--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_messaging.scss
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_messaging.scss
@@ -22,7 +22,7 @@
 ------------------ */
 
 .drupal-message {
-	margin: 1em auto;
+	margin: 2rem auto;
 	padding: 10px 10px 10px 50px; /* LTR */
 	background-color:$white;
 	background-image: url("../images/message-24-ok.png");
