--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-views/_event-views.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-views/_event-views.scss
@@ -1,13 +1,25 @@
 /* ==================
-    EVENTS VIEWS
+		EVENTS VIEWS
 ==================== */
-
 
 /* ALL UPCOMING
 ------------- */
 .events.all-upcoming-events{
-	.view-content{
-		@include safeFlex(row,wrap,null,null);
+	@include safeFlex(row,wrap,start,start);
+	& > *{
+		width: 100%;
 	}
-}
+	.view-content,.view-empty{
+		padding-bottom: 6rem;
+		.views-row{
+			@include inlineImageRow;
+			.views-field-nothing{
+				.date{
+					@include textDate;
+					margin-bottom: $spaceXs;
+				}
+			}
+		}
+	}
+}//end all upcoming events
 
