--- a/web/themes/oc_patterns/templates/zzz-custom/fields/field--node--field-tags--blog.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/fields/field--node--field-tags--blog.html.twig
@@ -37,51 +37,14 @@
  */
 #}
 
-{# no label #}
-{%- if label_hidden -%}
-  {# multi block with no label #}
-  {%- if multiple -%}
-    <div class="field {{ field_name|clean_class }} {{ field_type|clean_class }}">
-        {%- for item in items -%}
-          <div{{ item.attributes }}>
-            {% block fieldMultiNo %}
-              {{- item.content -}}
-            {% endblock %}
-          </div>
-        {%- endfor -%}
-    </div>
-  {# single block with no label #}
-  {%- else -%}
-    <div class="field {{ field_name|clean_class }} {{ field_type|clean_class }}">
-      {%- for item in items -%}
-        {% block fieldSingleNo %}
-          {{- item.content -}}
-        {% endblock %}
-      {%- endfor -%}
-    </div>
-  {%- endif -%}
-{%- else -%}
-  {# block with label #}
-  <div class="field {{ field_name|clean_class }} {{ field_type|clean_class }}">
-    {%- if (label_display == 'inline') -%}
-      <span class="inline-label">{{- label -}}:</span>
-    {% elseif (label_display == 'visually_hidden') %}
-      <div class="label visually-hidden">{{- label -}}</div>
-    {%- else -%}
-      <div class="label">{{- label -}}</div>
-    {%- endif -%}
-    {%- if multiple -%}
-      <div class="field-multi-item">
-    {%- endif -%}
-    {% block fieldLabel %}
-      {%- for item in items -%}
-        <div{{- item.attributes -}}>
-          {{- item.content -}}
-        </div>
-      {%- endfor -%}
-    {% endblock %}
-    {%- if multiple -%}
-      </div>
-    {%- endif -%}
+{% extends 'field.html.twig' %}
+
+{% block fieldLabel %}
+  <div class="tag-list">
+    {%- for item in items -%}
+      <a href="/blog?combine=&field_tags_target_id%5B%5D={{ item.content['#taxonomy_term'].id }}">
+        {{- item.content['#taxonomy_term'].label -}}
+      </a>{% if not loop.last %}, {% endif %}
+    {%- endfor -%}
   </div>
-{%- endif -%}
+{% endblock %}
