Add layout builder restrictions

--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/layout-builder/_layout_builder_admin.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/layout-builder/_layout_builder_admin.scss
@@ -40,7 +40,7 @@
 #drupal-off-canvas{
 	.block-categories{
 		.links{
-			a[href*="content/entity_field"]{
+			a[href*="/entity_field"]{
 				opacity: .4;
 			}
 		}
