--- a/web/themes/oc_patterns/components/_patterns/02-molecules/pagers/_pager.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/pagers/_pager.scss
@@ -105,7 +105,7 @@ $pager-line: 2.4rem;
 	@include safeFlex(row,wrap,null,null);
 	margin-top: 20px;
 	.view-footer{
-		width: 200px;
+		width: 49%;
 		margin-bottom: 0;
 		margin-left: 0;
 		margin-right: 0;
