Remove Full HTML format, update button styles and cke buttons

--- a/web/themes/oc_patterns/components/_patterns/01-atoms/03-lists/_lists.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/03-lists/_lists.scss
@@ -2,7 +2,7 @@
 		LISTS
 ================= */
 
-.field.body,.field-oc-long-text{
+.field.text-with-summary,.field,.text-long{
 	ul,ol {
 		//overflow hidden is needed for lists next to floated elements
 		overflow: hidden;
