--- a/web/themes/oc_patterns/components/_patterns/01-atoms/06-buttons/_default_buttons.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/06-buttons/_default_buttons.scss
@@ -19,7 +19,13 @@
 	font-family: $header;
 	font-weight: $heavy;
 	margin-bottom: $spaceMd;
-	cursor: pointer;
+	.field.text-with-summary &,.field.text-long &{
+		padding: 0;
+		a{
+			padding: 1rem 4rem;
+			display: block;
+		}
+	}
 	&:hover,&:focus {
 		color: $white;
 		background-color: $hoverLink;
@@ -32,7 +38,7 @@
 	a{
 		color: $white;
 	}
-}
+}//end button mixin
 
 ///mixin - outlineButton
 @mixin outlineButton($outlineColor){
@@ -40,6 +46,9 @@
 	background: transparent;
 	border: 2px solid $outlineColor;
 	color: $outlineColor;
+	a{
+		color: $outlineColor;
+	}
 	&:hover,&:focus{
 		background: $outlineColor;
 		color: $white;
