--- a/web/themes/oc_patterns/components/css/cke.css
+++ b/web/themes/oc_patterns/components/css/cke.css
@@ -55,19 +55,20 @@ small{
 }
 
 div.button{
-		background: #bf0e0e;
-		color: #fff;
-		padding: 10px;
-		margin: .5em 0;
-		display: block;
+		display: inline-block;
 		position: relative;
 		text-align: center;
-		max-width: 260px !important;
-		margin: 0 auto !important;
+		max-width: 260px;
+		margin: 1em auto;
 }
 div.button a{
 	color: #fff;
+	background: #bf0e0e;
+	padding: 10px 40px;
 	text-decoration: none;
+}
+div.button a:hover{
+	background: #676767;
 }
 a{
 	color: #bf0e0e;
