Fix block title bug

--- a/web/themes/oc_patterns/templates/zzz-custom/blocks/block--field-block.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/blocks/block--field-block.html.twig
@@ -49,7 +49,7 @@
     {{ title_prefix }}
     <div class="builder-label">{{ configuration.label }}</div>
     {% if label %}
-      <h2 class="block-title">{{ label }}</h2>
+      <h2 class="block-title">{{ configuration.label }}</h2>
     {% endif %}
     {{ title_suffix }}
     {% block content %}
