--- a/web/themes/oc_patterns/components/_patterns/01-atoms/08-media/_media.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/08-media/_media.scss
@@ -53,13 +53,13 @@ img{
 	margin-bottom: $spaceLg;
 
 	//embedded alignment (images only )
-	&.right:not(.has-video){
+	&.right{
 		@include tab {
 			float: right;
 			margin-left: 2rem;
 		}
 	}
-	&.left:not(.has-video){
+	&.left{
 		@include tab {
 			float: left;
 			margin-right: 2rem;
