--- a/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/text/_text.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/text/_text.scss
@@ -84,20 +84,10 @@ body {
 	@include baseFontSize;
 }
 
-//clear flaots in common long text fields
-.field.body,.field-oc-long-text{
-	& + *{
-		clear: both;
-	}
-}
-
 p{
 	margin-top: 0;
 	&:not(:last-child){
 		margin-bottom: $spaceMd;
-	}
-	&:last-child{
-		margin-bottom: 0;
 	}
 }
 
@@ -138,9 +128,22 @@ span.highlight{
 	color: currentColor;
 }
 
-
 blockquote{
 	@include quote;
+}
+
+//clear floats in common long text fields
+.field.body,.field-oc-long-text{
+	& + *{
+		clear: both;
+	}
+}
+
+//remove bottom margin on last child of long text fields
+.field-oc-long-text{
+	& > *:last-child{
+		margin-bottom: 0;
+	}
 }
 
 /* PATTERN LAB ONLY
