Adjusted margin bottom.

--- a/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/text/_text.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/text/_text.scss
@@ -137,10 +137,10 @@ blockquote{
 	& + *{
 		clear: both;
 	}
-}
+} 
 
 //remove bottom margin on last child of long text fields
-.field-oc-long-text{
+.text-long,.text-with-summary{
 	& > *:last-child{
 		margin-bottom: 0;
 	}
