--- a/web/themes/oc_patterns/components/_patterns/00-base/global/03-grid/grid.twig
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/03-grid/grid.twig
@@ -17,6 +17,6 @@
 	<li><strong>$onlyTab:</strong> 760–899px</li>
 	<li><strong>$onlySmall:</strong> < 760px</li>
 	<li><strong>$onlyPhone:</strong> < 500px</li>
-	<li><strong>$mobileMenu:</strong> < 980px</li>
-	<li><strong>$deskMenu:</strong> >= 980px</li>
+	<li><strong>$mobileStop:</strong> < 980px</li>
+	<li><strong>$desk:</strong> >= 980px</li>
 </ul>
