--- a/web/themes/oc_patterns/components/_patterns/00-base/global/04-mixins/mixins.twig
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/04-mixins/mixins.twig
@@ -52,15 +52,15 @@
 </div>
 <div class="mixin-tile">
 	<ul>
-		<li><strong>deskMenu</strong></li>
-		<li class="include-tag">@include deskMenu{}</li>
+		<li><strong>desk</strong></li>
+		<li class="include-tag">@include desk{}</li>
 		<li>Creates a breakpoint at 980px</li>
 	</ul>
 </div>
 <div class="mixin-tile">
 	<ul>
 		<li><strong>Mobile Menu</strong></li>
-		<li class="include-tag">@include mobileMenu{}</li>
+		<li class="include-tag">@include mobileStop{}</li>
 		<li>Creates a breakpoint from 0 to 979px</li>
 	</ul>
 </div>
