--- a/web/themes/oc_patterns/components/_patterns/02-molecules/menus/02-page-menu/_page-menu.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/menus/02-page-menu/_page-menu.scss
@@ -30,7 +30,7 @@
 			max-width: 440px;
 			@include auto;
 		}
-		@include deskMenu{
+		@include desk{
 			display: block !important;
 		}
 		& > ul:not(.contextual-links){
