--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_styleguide-specific.scss
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_styleguide-specific.scss
@@ -230,12 +230,12 @@ $plBorder: #333333;
 /* SITE HEADER
 ------------------ */
 .pl .layout-container > header{
-	@include mobileMenu{
+	@include mobileStop{
 		.sf-horizontal{
 			display: none;
 		}
 	}
-	@include deskMenu{
+	@include desk{
 		.sf-accordion-toggle{
 			display: none;
 		}
