--- a/web/themes/oc_patterns/components/_patterns/03-organisms/03-site/02-site-footer/_site-footer.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/03-site/02-site-footer/_site-footer.scss
@@ -37,7 +37,7 @@ footer {
 	@include tab{
 		@include calc(min-height, "100vh - 277px");
 	}
-	@include deskMenu{
+	@include desk{
 		@include calc(min-height, "100vh - 294px");
 	}
 }
