Help text, button mixins, filter work.

--- a/web/themes/oc_patterns/components/_patterns/01-atoms/05-buttons/_buttons.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/05-buttons/_buttons.scss
@@ -57,6 +57,30 @@
 	}
 }
 
+@mixin submitButton{
+	@include button;
+	background: $link;
+	color: $white;
+	height: 43px;
+	&:hover,&:focus{
+		background: $grey;
+		border-color: $grey;
+		color: $black;
+	}
+}
+
+@mixin resetButton{
+	@include button;
+	background: $darkGrey;
+	color: $white;
+	border-color: $darkGrey;
+	height: 43px;
+	&:hover,&:focus{
+		background: $grey;
+		border-color: $grey;
+		color: $black;
+	}
+}
 
 //button class
 .button {
