--- a/web/themes/oc_patterns/components/_patterns/01-atoms/05-buttons/01-button.twig
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/05-buttons/01-button.twig
@@ -2,9 +2,9 @@
   STYLEGUIDE ONLY: This template is not brought into to Drupal.
 #}
 <p>Default style for anything with class of 'button' or a button tag.</p>
-<button class="button" href="{{ default_button_url }}">
-	{% block default_button_content %}
-		{{ default_button_content }}
+<button class="button" href="{{ button_url }}">
+	{% block button_content %}
+		{{ button_content }}
 	{% endblock %}
 </button>
 <br>
